RESOLVED FIXED168940
[iOS] Getting QLPreviewProtocol slows down first navigation in Web process
https://bugs.webkit.org/show_bug.cgi?id=168940
Summary [iOS] Getting QLPreviewProtocol slows down first navigation in Web process
mitz
Reported 2017-02-27 15:15:43 PST
The first navigation in a Web process is slowed down checking if the protocol is QLPreviewProtocol, which involves dynamically loading Quick Look. This can be avoided for common schemes.
Attachments
Patch (7.10 KB, patch)
2017-02-28 15:07 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2017-02-28 15:05:25 PST
*** Bug 168993 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 2 2017-02-28 15:07:11 PST
Tim Horton
Comment 3 2017-02-28 15:07:35 PST
Simon Fraser (smfr)
Comment 4 2017-02-28 15:15:28 PST
Comment on attachment 302993 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=302993&action=review > Source/WebCore/loader/ios/QuickLook.mm:130 > + return NO; NO!
Note You need to log in before you can comment on or make changes to this bug.