[iOS] Getting QLPreviewProtocol slows down first navigation in Web process https://bugs.webkit.org/show_bug.cgi?id=168940 <rdar://problem/29468999>

Reviewed by Simon Fraser.

No new tests, just a performance improvement.

* loader/DocumentLoader.cpp:
(WebCore::isRemoteWebArchive):
* loader/PolicyChecker.cpp:
(WebCore::PolicyChecker::checkNavigationPolicy):
* loader/ResourceLoadNotifier.cpp:
(WebCore::ResourceLoadNotifier::dispatchWillSendRequest):
Make use of isQuickLookPreviewURL.

* loader/ios/QuickLook.h:
* loader/ios/QuickLook.mm:
(WebCore::isQuickLookPreviewURL):
Add isQuickLookPreviewURL, which first early-returns if the protocol
of the URL is a well-known protocol, and then falls back to loading QuickLook.

In a microbenchmark this is a 30-40% improvement in total time spent
loading an empty HTML document (wall-clock time between loadHTMLString
and didFinishNavigation).

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):
Make use of isQuickLookPreviewURL.


Canonical link: https://commits.webkit.org/185985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213182 268f45cc-cd09-0410-ab3c-d52691b4dbfc