Source/WebCore/loader/PolicyChecker.cpp
@@ -125,7 +125,7 @@ void PolicyChecker::checkNavigationPolicy(const ResourceRequest& request, bool d
 
 #if USE(QUICK_LOOK)
     // Always allow QuickLook-generated URLs based on the protocol scheme.
-    if (!request.isNull() && request.url().protocolIs(QLPreviewProtocol())) {
+    if (!request.isNull() && isQuickLookPreviewURL(request.url())) {
         continueAfterNavigationPolicy(PolicyUse);
         return;
     }
