Source/WebCore/loader/ios/QuickLook.h
@@ -44,11 +44,13 @@ class ResourceLoader;
 class ResourceRequest;
 class ResourceResponse;
 class SharedBuffer;
+class URL;
 
 WEBCORE_EXPORT NSSet *QLPreviewGetSupportedMIMETypesSet();
 WEBCORE_EXPORT void removeQLPreviewConverterForURL(NSURL *);
 WEBCORE_EXPORT RetainPtr<NSURLRequest> registerQLPreviewConverterIfNeeded(NSURL *, NSString *mimeType, NSData *);
 WEBCORE_EXPORT const char* QLPreviewProtocol();
+WEBCORE_EXPORT bool isQuickLookPreviewURL(const URL&);
 WEBCORE_EXPORT NSString *createTemporaryFileForQuickLook(NSString *fileName);
 
 class QuickLookHandle {
